# Game-server-cpp

./: CMakeLists.txt  Dockerfile  README.md
src/: application.cpp  application.h  collision_detector.cpp  collision_detector.h  db_connection_pool.h  db_handler.cpp  db_handler.h  extra_data.h  http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  json_logger.cpp  json_logger.h  json_utils.cpp  json_utils.h  loot_generator.h  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h  sdk.h  serialization.h  serializing_listener.h  tagged.h  tagged_uuid.cpp  tagged_uuid.h  ticker.cpp  ticker.h
tests/: collision-detector-tests.cpp  model-tests.cpp
